--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -181,14 +181,19 @@ layout: default
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                                     </span>
+                                    <p>😊{{site.github_username}}</p>
                                 </a>
                             </li>
                             {% endif %}
                             
                         </ul>
-                        {% if site.email %}
-                            <p>✉️ {{site.email}}</p>
+                        {% if site.author.email %}
+                            <p>✉️ {{site.author.email}}</p>
                         {% endif %}
+
+                        {% if site.author %}
+                        <p>💕 {{site.author.name},{site.author.description}}</p>
+                        {% endif %} 
                     </div>
                 </section>
                 <!-- Friends Blog -->
