--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -191,8 +191,8 @@ layout: default
                             <p>✉️ {{site.author.email}}</p>
                         {% endif %}
 
-                        {% if site.author %}
-                        <p>💕 {{site.author.name},{site.author.description}}</p>
+                        {% if site.author.name %}
+                        <p>💕 {{site.author.name}}</p>
                         {% endif %} 
                     </div>
                 </section>
