--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -188,7 +188,7 @@ layout: default
                         </ul>
                         {% if site.author %}
                         <p>🎨{{site.author.name}}</p>
-                        <p>😊{{site.description}}</p>
+                        <p>😊{{site.author.description}}</p>
                         <p>✉️{{site.author.email}}</p>
                         {% endif %} 
                     </div>
